--- a/PortfolioWebsite/.vscode/settings.json
+++ b/PortfolioWebsite/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "dotnet.defaultSolution": "EFCoreModelApp.sln"
+    "dotnet.defaultSolution": "EFCoreModelApp.sln",
+    "cSpell.words": [
+        "Hyperballad"
+    ]
 }
